--- a/client/src/design/_colors.scss
+++ b/client/src/design/_colors.scss
@@ -15,14 +15,14 @@ $color-button-bg: $color-link-text;
 $color-button-disabled-bg: darken(desaturate($color-button-bg, 20%), 10%);
 $color-button-text: white;
 
-$theme-color: #0386AC;
-$error-color: #F56C6C;
+$theme-color: #0386ac;
+$error-color: #f56c6c;
 $theme-common-bolder: 1px solid #ebeef5;
 $theme-gray-color: #999;
 
 $red-color: red;
-$value-blue: #0386AC;
-$border-color: #DCDFE6;
+$value-blue: #0386ac;
+$border-color: #dcdfe6;
 
-$success-color: #67C23A;
-$danger-color: #F56C6C;
+$success-color: #67c23a;
+$danger-color: #f56c6c;
