--- a/client/src/design/editor/main.scss
+++ b/client/src/design/editor/main.scss
@@ -1,8 +1,8 @@
-@import "variables";
+@import 'variables';
 
 * {
-  margin: 0;
-  padding: 0;
+  // margin: 0;
+  // padding: 0;
   box-sizing: border-box;
   text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -87,6 +87,6 @@ h3 {
   font-style: italic;
 }
 
-@import "./editor";
-@import "./menubar";
-@import "./menububble";
+@import './editor';
+@import './menubar';
+@import './menububble';
