--- a/client/src/design/_colors.scss
+++ b/client/src/design/_colors.scss
@@ -26,3 +26,19 @@ $border-color: #dcdfe6;
 
 $success-color: #67c23a;
 $danger-color: #f56c6c;
+
+$white-color: #fff;
+$gray-color: #ccc;
+$font-gray-color: rgba(0, 0, 0, 0.54);
+$disabled-color: #cfd8dc;
+$spinner-background-color: rgb(33, 33, 33);
+
+// $transparent-four-color: rgba(255, 255, 255, 0.4);
+// $transparent-half-color: rgba(255, 255, 255, 0.5);
+$transparent-six-color: rgba(255, 255, 255, 0);
+// $transparent-seven-color: rgba(255, 255, 255, 0.7);
+
+$transparent-four-color: #fff;
+$transparent-half-color: #fff;
+// $transparent-six-color: #fff;
+$transparent-seven-color: #fff;
