--- a/client/src/design/_sizes.scss
+++ b/client/src/design/_sizes.scss
@@ -9,19 +9,18 @@ $size-content-width-min: 25rem;
 $size-input-padding-vertical: 0.75em;
 $size-input-padding-horizontal: 1em;
 $size-input-padding: $size-input-padding-vertical $size-input-padding-horizontal;
-$size-input-border: 1px;
+$size-input-border: 2px;
 $size-input-border-radius: (1em + $size-input-padding-vertical * 2) / 10;
 
 // BUTTONS
 $size-button-padding-vertical: $size-grid-padding / 2;
 $size-button-padding-horizontal: $size-grid-padding / 1.5;
-$size-button-padding: $size-button-padding-vertical
-  $size-button-padding-horizontal;
+$size-button-padding: $size-button-padding-vertical $size-button-padding-horizontal;
 
 $size-common-padding: 30px 50px;
 $size-horizontal-padding: 0 50px;
 
-$header-box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%),
-  0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
+$header-box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
+  0 1px 10px 0 rgb(0 0 0 / 12%);
 $card-box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%),
   0 1px 5px 0 rgb(0 0 0 / 12%);
