--- a/client/src/design/index.scss
+++ b/client/src/design/index.scss
@@ -22,3 +22,37 @@
   // console.log(design['global-grid-padding'])
   // $theme-color: #E6A23C;
 }
+
+#nprogress {
+  .bar {
+    background: $white-color;
+  }
+  .spinner {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: $spinner-background-color;
+    border-color: $spinner-background-color;
+    opacity: 0.46;
+    .spinner-icon {
+      width: 50px;
+      height: 50px;
+      left: 50%;
+      top: 50%;
+      position: fixed;
+      transform: translate(-50%, -50%);
+      border: solid 4px transparent;
+      border-top-color: $theme-color;
+      border-left-color: $theme-color;
+      border-radius: 50%;
+      animation-duration: 600ms;
+    }
+  }
+}
+
+.vxe-table--body {
+  .table-row {
+    background: rgba(255, 255, 255, 0.5);
+  }
+}
