--- a/client/src/design/_colors.scss
+++ b/client/src/design/_colors.scss
@@ -33,7 +33,7 @@ $font-gray-color: rgba(0, 0, 0, 0.54);
 $disabled-color: #cfd8dc;
 $spinner-background-color: rgb(33, 33, 33);
 
-// $transparent-four-color: rgba(255, 255, 255, 0.4);
+$transparent-three-color: rgba(255, 255, 255, 0.3);
 // $transparent-half-color: rgba(255, 255, 255, 0.5);
 $transparent-six-color: rgba(255, 255, 255, 0);
 // $transparent-seven-color: rgba(255, 255, 255, 0.7);
